--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       	</ul>
         <ul class="list-content ">
         	<!-- <li></li> YOUR PHONE NUMBER  -->
-        	<li>dkucher@umich.edu</li> <!-- YOUR EMAIL -->
-        	<li><a href="#">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
+        	<li><a href="#">dkucher@umich.edu</li> <!-- YOUR EMAIL -->
+        	<li><a href="dkucher.github.io">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
         	<!-- <li>City, State, USA</li> <!-- YOUR STATE AND COUNTRY  -->
         </ul>
       </div>
