--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 <link href='custom.css' rel='stylesheet'>
 </head>
-
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <div class="resume-wrapper">
 	<section class="profile section-padding">
