--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link href='custom.css' rel='stylesheet'>
 </head>
 <link href="//fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <div class="resume-wrapper">
 	<section class="profile section-padding">
