--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@
       <div class="experience-wrapper">
       	<div class="company-wrapper clearfix">
       		<div class="experience-title">Independent Web Development</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-          <div class="time">June 2015 - May2016</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+          <div class="time">June 2015 - May 2016</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
       	</div>
         
         <div class="job-wrapper clearfix">
         	<div class="experience-title">Web Developer</div> <!-- JOB TITLE  -->
           <div class="company-description">
-          	<p>Identified and analyzed methods to improve tracking of student involvement and completion of requirements for membership in the National Honor Society.</p><!-- JOB DESCRIPTION  -->
-            <p>Designed a Web Design and User Interface for a Web-based Application.</p>
-		  	<p>Tested and Developed the Web Application using Ruby and Ruby on Rails</p>
-		  	<p>Deployed the Web Application to Amazon Web Services and updated services throughout the course of the school year.</p>
+          	<p>Identified and analyzed methods to improve tracking of student involvement and completion of requirements for membership in the National Honor Society</p><!-- JOB DESCRIPTION  -->
+            <p>Designed, Developed, and Deployed the Web Application using Ruby on Rails</p>
+		  	<p>Performed Maintenance and Improvement</p>
 		  </div>
         </div>
         
