--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>David <br/>Kucher</h1><!-- YOUR NAME AND LAST NAME  -->
       <div class="clearfix"></div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-      	<p><span class="bold"> Summary </span> </p>
+      	<!-- <p><span class="bold"> Summary </span> </p> -->
       	<p> I'm a student at the University of Michigan</p>
       </div>
       <div class="contact-info clearfix">
@@ -24,7 +24,7 @@
         <ul class="list-content ">
         	<!-- <li></li> YOUR PHONE NUMBER  -->
         	<li><a href="#">dkucher@umich.edu</li> <!-- YOUR EMAIL -->
-        	<li><a href="dkucher.github.io">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
+        	<li><a href="https://www.dkucher.github.io">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
         	<!-- <li>City, State, USA</li> <!-- YOUR STATE AND COUNTRY  -->
         </ul>
       </div>
@@ -88,7 +88,7 @@
           	<p>Oversaw and led student exercises.</p>
 
 			<p>Managed relations between students and coaches</p>
-
+			
 			</p>   <!-- JOB DESCRIPTION  -->
           </div>
         </div>
