--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="list-content ">
         	<!-- <li></li> YOUR PHONE NUMBER  -->
         	<li><a href="#">dkucher@umich.edu</li> <!-- YOUR EMAIL -->
-        	<li><a href="https://www.dkucher.github.io">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
+        	<li><a href="#">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
         	<!-- <li>City, State, USA</li> <!-- YOUR STATE AND COUNTRY  -->
         </ul>
       </div>
