--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div class="resume-wrapper">
 	<section class="profile section-padding">
 		<div class="container">
-			<div class="picture-resume"><img src=https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAfoAAAAJDc4Y2YxYmI0LTNhMDYtNDUyZS05Y2M5LWM3MGM0ZTQ5MWYwYw.jpg></div>
+			<div class="picture-resume"></div>
       <h1>David <br/>Kucher</h1><!-- YOUR NAME AND LAST NAME  -->
       <div class="clearfix"></div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
