--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-	<link href='static/custom.css' rel='stylesheet'>
+	<link href='custom.css' rel='stylesheet'>
 </head>
 
 <link href="//fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
