--- a/index.html
+++ b/index.html
@@ -1,119 +1,126 @@
-<head>
-	<link href='custom.css' rel='stylesheet'>
-</head>
-
-<link href="//fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<div class="resume-wrapper">
-	<section class="profile section-padding">
-		<div class="container">
-			<div class="picture-resume"></div>
-			
-			<h1>David <br/>Kucher</h1><!-- YOUR NAME AND LAST NAME  -->
-			
-			<div class="clearfix"></div>
-			
-			<div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME	-->
-				<!-- <p><span class="bold"> Summary </span> </p> -->
-				<p> I'm a student at the University of Michigan</p>
-			</div>
-			
-			<div class="contact-info clearfix">
-				<ul class="list-titles">
-					<li>E Mail</li>
-					<li>Web</li>
-				</ul>
-	
-				<ul class="list-content ">
-					<li><a href="#">dkucher@umich.edu</a></li> <!-- YOUR EMAIL -->
-					<li><a href="#">dkucher.github.io</a></li> <!-- YOUR WEBSITE  -->
-				</ul>
-			</div>
-
-			<div class="contact-social clearfix">
-				<ul class="list-titles">
-					<li>LinkedIn</li>
-				</ul>
-				
-				<ul class="list-content"> <!-- REMEMBER TO PUT THE URL ON THE HREF TAG	-->
-					<li><a href="https://www.linkedin.com/in/davidkucher/">LinkedIn</a></li> <!-- YOUR LI USER -->
-				</ul>
-			</div> 
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link href="custom.css" rel="stylesheet"/>
+		<link href="//fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"/>
+		<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet"/>
+	</head>
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/> -->
+	<body>
+		<div class="resume-wrapper">
+			<section class="profile section-padding">
+				<div class="container">
+					<div class="picture-resume"/>
+					<h1>David <br/>Kucher</h1>
+					<!-- YOUR NAME AND LAST NAME  -->
+					<div class="clearfix"/>
+					<div class="contact-presentation">
+						<!-- YOUR PRESENTATION RESUME	-->
+						<!-- <p><span class="bold"> Summary </span> </p> -->
+						<p> I'm a student at the University of Michigan</p>
+					</div>
+					<div class="contact-info clearfix">
+						<ul class="list-titles">
+							<li>E Mail</li>
+							<li>Web</li>
+						</ul>
+						<ul class="list-content ">
+							<li>
+								<a href="#">dkucher@umich.edu</a>
+							</li>
+							<!-- YOUR EMAIL -->
+							<li>
+								<a href="#">dkucher.github.io</a>
+							</li>
+							<!-- YOUR WEBSITE  -->
+						</ul>
+					</div>
+					<div class="contact-social clearfix">
+						<ul class="list-titles">
+							<li>LinkedIn</li>
+						</ul>
+						<ul class="list-content">
+							<!-- REMEMBER TO PUT THE URL ON THE HREF TAG	-->
+							<li>
+								<a href="https://www.linkedin.com/in/davidkucher/">LinkedIn</a>
+							</li>
+							<!-- YOUR LI USER -->
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section class="experience section-padding">
+				<div class="container">
+					<h3 class="experience-title">Experience</h3>
+					<div class="experience-wrapper">
+						<div class="company-wrapper clearfix">
+							<div class="experience-title">MedIX REU at DePaul University</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH  -->
+							<div class="time">Summer 2017</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY  -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Undergraduate Researcher: Mental Health Informatics</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+								<p>Conducted research on mental health informatics, leveraging topic modeling techniques to analyze social media for information regarding mental health issues.</p>
+								<p>Contributed to the code to collect, process, and analyze data for meaningful information, and helped write and edit research papers documenting analysis and results.</p>
+								<p>Provided weekly, midterm, and final presentations about project progress.</p>
+								<!-- JOB DESCRIPTION	-->
+							</div>
+						</div>
+						<div class="company-wrapper clearfix">
+							<div class="experience-title">Independent Web Development</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH  -->
+							<div class="time">Summer 2016</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY	-->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Web Developer</div>
+							<!-- JOB TITLE  -->
+							<div class="company-description">
+								<p>Identified and analyzed methods to improve tracking of student involvement and completion of requirements for membership in the National Honor Society</p>
+								<!-- JOB DESCRIPTION  -->
+								<p>Designed, Developed, and Deployed the Web Application using Ruby on Rails</p>
+								<p>Performed Maintenance and Improvement</p>
+							</div>
+						</div>
+						<div class="company-wrapper clearfix">
+							<div class="experience-title">Proxio, Inc.</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<div class="time">July 2016</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Remote Work</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+								<p>Collaborated with a Product Manager to provide translations for a new Web platform.</p>
+								<p>Implemented the addition of Images for a new Web platform.</p>
+							</div>
+						</div>
+					</div>
+					<!--Skill experience-->
+					<div class="section-wrapper clearfix">
+						<h3 class="section-title">Skills</h3>
+						<!-- YOUR SET OF SKILLS	-->
+						<ul>
+							<li class="skill-percentage">Web</li>
+							<li class="skill-percentage">Computer</li>
+						</ul>
+					</div>
+					<!-- Education -->
+					<div class="section-wrapper clearfix">
+						<h3 class="section-title">Education</h3>
+						<!-- DESCRIPTION OF YOUR HOBBIES -->
+						<p>2016-Present</p>
+						<p>College of Engineering</p>
+						<p>University of Michigan</p>
+					</div>
+				</div>
+			</section>
+			<div class="clearfix"/>
 		</div>
-	</section>
-
-	<section class="experience section-padding">
-		<div class="container">
-			<h3 class="experience-title">Experience</h3>
-
-			<div class="experience-wrapper">
-				<div class="company-wrapper clearfix">
-					<div class="experience-title">MedIX REU at DePaul University</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-					<div class="time">June 2017 - August 2017</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
-				</div>
-				<div class="job-wrapper clearfix">
-				<div class="experience-title">Undergraduate Researcher: Mental Health Informatics</div> <!-- JOB TITLE	-->
-				<div class="company-description">
-					<p>Collaborated with other undergraduate researchers to utilize neural networks to analyze reddit text from the SuicideWatch subreddit in order to predict suicidal ideation</p>
-					<p>Collaborated to create and present weekly, midterm, and final presentations on research progress</span></p>
-					<p>Collaborated to write and publish a research paper on a computational analysis of suicidal ideation</p><!-- JOB DESCRIPTION	-->
-				</div>
-			</div>
-
-				<div class="company-wrapper clearfix">
-				<div class="experience-title">Independent Web Development</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-				<div class="time">June 2015 - May 2016</div> <!-- THE TIME YOU WORK WITH THE COMPANY	-->
-			</div>
-				<div class="job-wrapper clearfix">
-				<div class="experience-title">Web Developer</div> <!-- JOB TITLE  -->
-				<div class="company-description">
-					<p>Identified and analyzed methods to improve tracking of student involvement and completion of requirements for membership in the National Honor Society</p><!-- JOB DESCRIPTION  -->
-					<p>Designed, Developed, and Deployed the Web Application using Ruby on Rails</p>
-					<p>Performed Maintenance and Improvement</p>
-				</div>
-			</div>
-
-				<div class="company-wrapper clearfix">
-				<div class="experience-title">Proxio, Inc.</div> <!-- NAME OF THE COMPANY YOUWORK WITH	-->
-				<div class="time">July 2016</div> <!-- THE TIME YOU WORK WITH THE COMPANY	 -->
-			</div>
-				<div class="job-wrapper clearfix">
-				<div class="experience-title">Remote Work</div> <!-- JOB TITLE	-->
-				<div class="company-description">
-					<p>Collaborated with a Product Manager to provide translations for a new Web platform.</p>
-					<p>Implemented the addition of Images for a new Web platform.</p>
-				</div>
-			</div>
-
-				<div class="company-wrapper clearfix">
-				<div class="experience-title">Glenbard West High School</div> <!-- NAME OF THE COMPANY YOUWORK WITH	-->
-				<div class="time">June 2016 - July 2016</div> <!-- THE TIME YOU WORK WITH THE COMPANY	 -->
-			</div> 
-				<div class="job-wrapper clearfix">
-				<div class="experience-title">Cross Country Camp Counselor</div> <!-- JOB TITLE	 -->
-				<div class="company-description">
-					<p>Was responsible for leading Elementary and Middle School-aged runners through exercises</p>	 <!-- JOB DESCRIPTION  -->
-				</div>
-			</div>
-			</div>
-			<!--Skill experience-->
-			<div class="section-wrapper clearfix">
-				<h3 class="section-title">Skills</h3>  <!-- YOUR SET OF SKILLS	-->
-				<ul>
-					<li class="skill-percentage">Web</li>
-					<li class="skill-percentage">Computer</li>
-				</ul>
-			</div>
-			<!-- Education -->
-			<div class="section-wrapper clearfix">
-				<h3 class="section-title">Education</h3>  <!-- DESCRIPTION OF YOUR HOBBIES -->
-				<p>2016-Present</p>
-				<p>College of Engineering</p>
-				<p>University of Michigan</p>
-			</div>
-		</div>
-	</section>
-
-<div class="clearfix"></div>
-</div>
+	</body>
+</html>
