--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link href="//fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"/>
 		<link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet"/>
 	</head>
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<body>
 		<div class="resume-wrapper">
 			<section class="profile section-padding">
@@ -96,8 +96,7 @@
 							<div class="experience-title">Remote Work</div>
 							<!-- JOB TITLE	-->
 							<div class="company-description">
-								<p>Collaborated with a Product Manager to provide translations for a new Web platform.</p>
-								<p>Implemented the addition of Images for a new Web platform.</p>
+								<p>Aided in project work when Proxio redesigned their user interface.</p>
 							</div>
 						</div>
 					</div>
