fixed picture div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="resume-wrapper">
 			<section class="profile section-padding">
 				<div class="container">
-					<div class="picture-resume"/>
+					<div class="picture-resume"></div>
 					<h1>David <br/>Kucher</h1>
 					<!-- YOUR NAME AND LAST NAME  -->
 					<div class="clearfix"/>
