updated LI formatting

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 						<ul class="list-titles">
 							<li>E Mail</li>
 							<li>Web</li>
+							<li>LinkedIn</li>
 						</ul>
 						<ul class="list-content ">
 							<li>
@@ -34,9 +35,13 @@
 								<a href="#">dkucher.github.io</a>
 							</li>
 							<!-- YOUR WEBSITE  -->
+							<li>
+								<a href="https://www.linkedin.com/in/davidkucher/">LinkedIn</a>
+							</li>
+							<!-- YOUR LI PROFILE -->
 						</ul>
 					</div>
-					<div class="contact-social clearfix">
+					<!-- UNIFYING THE TWO CONTACT LISTS <div class="contact-social clearfix">
 						<ul class="list-titles">
 							<li>LinkedIn</li>
 						</ul>
@@ -47,7 +52,7 @@
 							</li>
 							<!-- YOUR LI USER -->
 						</ul>
-					</div>
+					</div>  -->
 				</div>
 			</section>
 			<section class="experience section-padding">
@@ -71,19 +76,18 @@
 							</div>
 						</div>
 						<div class="company-wrapper clearfix">
-							<div class="experience-title">Independent Web Development</div>
+							<div class="experience-title">National Honor Society Web Development</div>
 							<!-- NAME OF THE COMPANY YOUWORK WITH  -->
 							<div class="time">Summer 2016</div>
 							<!-- THE TIME YOU WORK WITH THE COMPANY	-->
 						</div>
 						<div class="job-wrapper clearfix">
-							<div class="experience-title">Web Developer</div>
+							<div class="experience-title">Developer</div>
 							<!-- JOB TITLE  -->
 							<div class="company-description">
-								<p>Identified and analyzed methods to improve tracking of student involvement and completion of requirements for membership in the National Honor Society</p>
+								<p>Created a web-based application used by the chapter of the National Honor Society of my high school.</p>
 								<!-- JOB DESCRIPTION  -->
-								<p>Designed, Developed, and Deployed the Web Application using Ruby on Rails</p>
-								<p>Performed Maintenance and Improvement</p>
+								<p>Designed and programmed the web application using Ruby and the Rails framework to leverage relational databases and a user-friendly interface to allow members to easily keep track of their volunteer progress.</p>
 							</div>
 						</div>
 						<div class="company-wrapper clearfix">
@@ -93,7 +97,7 @@
 							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
 						</div>
 						<div class="job-wrapper clearfix">
-							<div class="experience-title">Remote Work</div>
+							<div class="experience-title">Project Work</div>
 							<!-- JOB TITLE	-->
 							<div class="company-description">
 								<p>Aided in project work when Proxio redesigned their user interface.</p>
