--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<!-- THE TIME YOU WORK WITH THE COMPANY  -->
 						</div>
 						<div class="job-wrapper clearfix">
-							<div class="experience-title">Undergraduate Researcher: Mental Health Informatics</div>
+							<div class="experience-title">Undergraduate Researcher</div>
 							<!-- JOB TITLE	-->
 							<div class="company-description">
 								<p>Conducted research on mental health informatics, leveraging topic modeling techniques to analyze social media for information regarding mental health issues.</p>
