--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<div class="contact-presentation">
 						<!-- YOUR PRESENTATION RESUME	-->
 						<!-- <p><span class="bold"> Summary </span> </p> -->
-						<p> I'm a student at the University of Michigan</p>
+						<p>I'm a student at the University of Michigan. I like to create programs to solve problems.</p>
 					</div>
 					<div class="contact-info clearfix">
 						<ul class="list-titles">
@@ -57,7 +57,7 @@
 							<div class="experience-title">Undergraduate Researcher</div>
 							<!-- JOB TITLE	-->
 							<div class="company-description">
-								<p>Conducted research on mental health informatics, leveraging topic modeling techniques to analyze social media for information regarding mental health issues.</p>
+								<p>Conducted research on mental health informatics, leveraging topic modeling and natural language processing algorithms to analyze social media for information regarding mental health issues.</p>
 								<p>Contributed to the code to collect, process, and analyze data for meaningful information, and helped write and edit research papers documenting analysis and results.</p>
 								<p>Provided weekly, midterm, and final presentations about project progress.</p>
 								<!-- JOB DESCRIPTION	-->
@@ -75,7 +75,7 @@
 							<div class="company-description">
 								<p>Created a web-based application used by the chapter of the National Honor Society of my high school.</p>
 								<!-- JOB DESCRIPTION  -->
-								<p>Designed and programmed the web application using Ruby and the Rails framework to leverage relational databases and a user-friendly interface to allow members to easily keep track of their volunteer progress.</p>
+								<p>Designed and programmed the front and back end using Ruby and the Rails framework to leverage relational databases and a user-friendly interface to allow members to easily keep track of their volunteer progress.</p>
 							</div>
 						</div>
 						<div class="company-wrapper clearfix">
@@ -97,17 +97,18 @@
 						<h3 class="section-title">Skills</h3>
 						<!-- YOUR SET OF SKILLS	-->
 						<ul>
-							<li class="skill-percentage">Web</li>
-							<li class="skill-percentage">Computer</li>
+							<li class="skill">Web Development</li>
+							<li class="skill">Computer Programming</li>
 						</ul>
 					</div>
 					<!-- Education -->
 					<div class="section-wrapper clearfix">
 						<h3 class="section-title">Education</h3>
 						<!-- DESCRIPTION OF YOUR HOBBIES -->
-						<p>2016-Present</p>
-						<p>College of Engineering</p>
 						<p>University of Michigan</p>
+						<p>College of Engineering - Computer Engineering</p>
+						<p>Intended Graduation Date: April 2020</p>
+						<p>GPA: 4.0</p>
 					</div>
 				</div>
 			</section>
