--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<div class="contact-presentation">
 						<!-- YOUR PRESENTATION RESUME	-->
 						<!-- <p><span class="bold"> Summary </span> </p> -->
-						<p>I'm a student at the University of Michigan. I like to create programs to solve problems.</p>
+						<p>I'm a student at the University of Michigan</p>
 					</div>
 					<div class="contact-info clearfix">
 						<ul class="list-titles">
