--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<div class="contact-presentation">
 						<!-- YOUR PRESENTATION RESUME	-->
 						<!-- <p><span class="bold"> Summary </span> </p> -->
-						<p>I'm a student at the University of Michigan</p>
+						<p>I'm a graduate student at the University of Michigan, looking for opportunities in machine learning and software engineering. I like building and understanding systems, and creating reliable and useful tools.</p>
 					</div>
 					<div class="contact-info clearfix">
 						<ul class="list-titles">
@@ -41,12 +41,105 @@
 							<!-- YOUR LI PROFILE -->
 						</ul>
 					</div>
-				</div>
+                </div>
+                
+                <!--Skill experience-->
+                <div class="container">
+                    <div class="section-wrapper clearfix">
+                        <h3 class="section-title">Skills</h3>
+                        <!-- YOUR SET OF SKILLS	-->
+                        <ul>
+                            <li class="skill">Python</li>
+                            <li class="skill">C++</li>
+                            <li class="skill">Git</li>
+                            <li class="skill">Machine Learning</li>
+                            <li class="skill">Tensorflow</li>
+                            <li class="skill">PyTorch</li>
+                        </ul>
+                    </div>
+                    <!-- Education -->
+                    <div class="section-wrapper clearfix">
+                        <h3 class="section-title">Education</h3>
+                        <!-- DESCRIPTION OF YOUR HOBBIES -->
+                        <p>University of Michigan</p>
+                        <p>MSE Electrical and Computer Engineering | 2021</p>
+                        <p>BSE Computer Engineering | 2019</p>
+                    </div>
+                </div>
 			</section>
 			<section class="experience section-padding">
 				<div class="container">
 					<h3 class="experience-title">Experience</h3>
 					<div class="experience-wrapper">
+
+                        <!-- U of M GSI 2020-21-->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">University of Michigan</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<div class="time">January 2020 - Present</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Graduate Student Instructor</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Supported 40+ students in lab exercises in Python and C on embedded systems, and helped develop skills  in signal processing and system integration later used in their senior design projects.</p>
+                                <p>Reviewed project proposals and offered feedback and debugging help for students to obtain their milestones and project goals.</p>
+							</div>
+                        </div>
+
+                        <!-- KLA 2020 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">KLA Corporation</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<div class="time">Summer 2020</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">HPC Software Engineering Intern</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Improved baseline model performance by using multiple feature extraction techniques, including dimensionality reduction with PCA, convolutional neural networks, and texture-based features.</p>
+                                <p>Analyzed  “Double Descent” phenomenon on KLA’s regression use-cases in computer vision using convolutional and deep neural networks implemented in tensorflow, and managed experiments using mlflow.</p>
+                                <p>Created containerized machine learning infrastructure for algorithm development with CI, automatic testing, dependency control, experiment tracking, hyperparameter tuning, and GPU acceleration.</p>
+							</div>
+                        </div>
+                        
+                        <!-- Duo 2019 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">Duo Security</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<div class="time">Summer 2019</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Software Engineering Intern</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Improved the Duo Network Gateway under Agile framework, which included network and asynchronous programming in Python, and developing and testing code in docker containers.</p>
+                                <p>Investigated failure in Google’s NaSSH network protocol in the DNG, then proposed, tested, and implemented a solution by leveraging Go’s channels and the Twisted asynchronous Python library.</p>
+                                <p>Collaborated with teammates on tasks by soliciting and performing code reviews and design discussions, along with regular sprint planning and retrospectives.</p>
+							</div>
+                        </div>
+
+                        <!-- X-Rite 2018 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">X-Rite, Inc.</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<div class="time">Summer 2018</div>
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Software Engineering Intern</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Ported X-Rite’s universal device driver SDK from Windows to Linux, which utilizes image processing, multi-threading, and shared libraries to oversee device communications.</p>
+                                <p>Programmed a test application using Qt for a C++ GUI to demonstrate driver SDK functionality.</p>
+                                <p>Refactored and improved an image correction algorithm on device firmware, and applied bug fixes and updated features on X-Rite’s main color-matching software</p>
+							</div>
+                        </div>
+
+                        <!-- MedIX 2017 -->
 						<div class="company-wrapper clearfix">
 							<div class="experience-title">MedIX REU at DePaul University</div>
 							<!-- NAME OF THE COMPANY YOUWORK WITH  -->
@@ -78,37 +171,6 @@
 								<p>Designed and programmed the front and back end using Ruby and the Rails framework to leverage relational databases and a user-friendly interface to allow members to easily keep track of their volunteer progress.</p>
 							</div>
 						</div>
-						<div class="company-wrapper clearfix">
-							<div class="experience-title">Proxio, Inc.</div>
-							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
-							<div class="time">July 2016</div>
-							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
-						</div>
-						<div class="job-wrapper clearfix">
-							<div class="experience-title">Project Work</div>
-							<!-- JOB TITLE	-->
-							<div class="company-description">
-								<p>Aided in project work when Proxio redesigned their user interface.</p>
-							</div>
-						</div>
-					</div>
-					<!--Skill experience-->
-					<div class="section-wrapper clearfix">
-						<h3 class="section-title">Skills</h3>
-						<!-- YOUR SET OF SKILLS	-->
-						<ul>
-							<li class="skill">Web Development</li>
-							<li class="skill">Computer Programming</li>
-						</ul>
-					</div>
-					<!-- Education -->
-					<div class="section-wrapper clearfix">
-						<h3 class="section-title">Education</h3>
-						<!-- DESCRIPTION OF YOUR HOBBIES -->
-						<p>University of Michigan</p>
-						<p>College of Engineering - Computer Engineering</p>
-						<p>Intended Graduation Date: April 2020</p>
-						<p>GPA: 4.0</p>
 					</div>
 				</div>
 			</section>
