Update Resume and add projects + github links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</ul>
 						<ul class="list-content ">
 							<li>
-								<a href="#">dkucher@umich.edu</a>
+								<a href="#">mrdkucher@umich.edu</a>
 							</li>
 							<!-- YOUR EMAIL -->
 							<li>
@@ -41,30 +41,6 @@
 							<!-- YOUR LI PROFILE -->
 						</ul>
 					</div>
-                </div>
-                
-                <!--Skill experience-->
-                <div class="container">
-                    <div class="section-wrapper clearfix">
-                        <h3 class="section-title">Skills</h3>
-                        <!-- YOUR SET OF SKILLS	-->
-                        <ul>
-                            <li class="skill">Python</li>
-                            <li class="skill">C++</li>
-                            <li class="skill">Git</li>
-                            <li class="skill">Machine Learning</li>
-                            <li class="skill">Tensorflow</li>
-                            <li class="skill">PyTorch</li>
-                        </ul>
-                    </div>
-                    <!-- Education -->
-                    <div class="section-wrapper clearfix">
-                        <h3 class="section-title">Education</h3>
-                        <!-- DESCRIPTION OF YOUR HOBBIES -->
-                        <p>University of Michigan</p>
-                        <p>MSE Electrical and Computer Engineering | 2021</p>
-                        <p>BSE Computer Engineering | 2019</p>
-                    </div>
                 </div>
 			</section>
 			<section class="experience section-padding">
@@ -171,7 +147,129 @@
 								<p>Designed and programmed the front and back end using Ruby and the Rails framework to leverage relational databases and a user-friendly interface to allow members to easily keep track of their volunteer progress.</p>
 							</div>
 						</div>
-					</div>
+                    </div>
+
+                    <h3 class="experience-title">Projects</h3>
+					<div class="experience-wrapper">
+                        <!-- EECS 545 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">EECS 545: Machine Learning</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<!-- <div class="time">January 2020 - Present</div> -->
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Classification of Moving Objects via Change Detection and XNOR Networks in Real Time</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Final project which used fastMCD change detection algorithm along with Binary Weight and XNOR networks to classify objects. Outperformed state of the art YOLO approaches in FPS, IOU, and classification accuracy.</p>
+                                <p>Github: <a href="https://github.com/ejshumaker/EECS545RFProject">EECS 545 Git Repository</a></p>
+							</div>
+                        </div>
+                        
+                        <!-- EECS 452 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">EECS 452: Digital Signal Processing Design Lab</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<!-- <div class="time">January 2020 - Present</div> -->
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Hive Mind: An Autonomous, Distributed Mapping System</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Final project which used multiple agents to explore a maze environment using ultrasonic sensors, wheel encoders, Arduino microcontrollers, and a network of Raspberry Pis. Directed project team’s progress, and implemented an asynchronous, mapping system using socket network programming.</p>
+                                <p>Gitlab: <a href="https://gitlab.eecs.umich.edu/dkucher/hive-mind/-/tree/master/">EECS 452 Git Repository</a></p>
+							</div>
+                        </div>
+
+                        <!-- EECS 442 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">EECS 442: Computer Vision</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<!-- <div class="time">January 2020 - Present</div> -->
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Automatic Colorization of Animation Frames</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Final project which evaluated several approaches including Convolutional Neural Networks and Generative Adversarial Networks to automatically colorize images. Utilized pytorch and scikit-learn to implement neural networks.</p>
+                                <p>Gitlab: <a href="https://gitlab.eecs.umich.edu/dkucher/eecs442project">EECS 442 Git Repository</a></p>
+							</div>
+                        </div>
+
+                        <!-- EECS 351 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">EECS 351: Introduction to Digital Sigal Processing</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<!-- <div class="time">January 2020 - Present</div> -->
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">EECS 442: Computer Vision</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Course final project which automatically solves mazes parsed from images. Automatically detects maze entrances, compresses image via convolution to reduce redundant information, then compares solutions of A* search, BFS, or MATLAB watershed algorithm.</p>
+                                <p>Gitlab: <a href="https://gitlab.eecs.umich.edu/dkucher/eecs351-final-project">EECS 351 Git Repository</a></p>
+							</div>
+                        </div>
+
+                        <!-- Histotripsy Group -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">Therapeutic Ultrasound Group</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<!-- <div class="time">January 2020 - Present</div> -->
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Lab Assistant</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Developed a multi-layered application using networking fundamentals including socket programming to interface with, command, and retrieve data from an FPGA network.</p>
+                                <p>Github: <a href="https://github.com/macoskey/Poseidon">Poseidon Git Repository</a></p>
+							</div>
+                        </div>
+
+                        <!-- EECS 281 -->
+                        <div class="company-wrapper clearfix">
+							<div class="experience-title">EECS 281: Algorithms and Data Structures</div>
+							<!-- NAME OF THE COMPANY YOUWORK WITH	-->
+							<!-- <div class="time">January 2020 - Present</div> -->
+							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
+						</div>
+						<div class="job-wrapper clearfix">
+							<div class="experience-title">Graph Traversal Visualization Tool</div>
+							<!-- JOB TITLE	-->
+							<div class="company-description">
+                                <p>Created a visualization tool to visualize the generated tours using fast traveling salesman problem (TSP) or optimum TSP algorithms. The class mentioned one would be provided but it never materialized, so I created one.</p>
+                                <p>Github: <a href="https://github.com/mrdkucher/visualizationTool">Visualization Tool Git Repository</a></p>
+							</div>
+                        </div>
+                    </div>
+
+
+                    <!--Skill experience-->
+                    <div class="section-wrapper clearfix">
+                        <h3 class="section-title">Skills</h3>
+                        <!-- YOUR SET OF SKILLS	-->
+                        <ul>
+                            <li class="skill">Python</li>
+                            <li class="skill">C++</li>
+                            <li class="skill">Git</li>
+                            <li class="skill">Machine Learning</li>
+                            <li class="skill">Tensorflow</li>
+                            <li class="skill">PyTorch</li>
+                        </ul>
+                    </div>
+                    <!-- Education -->
+                    <div class="section-wrapper clearfix">
+                        <h3 class="section-title">Education</h3>
+                        <!-- DESCRIPTION OF YOUR HOBBIES -->
+                        <p>University of Michigan</p>
+                        <p>MSE Electrical and Computer Engineering | 2021</p>
+                        <p>BSE Computer Engineering | 2019</p>
+                    </div>
 				</div>
 			</section>
 			<div class="clearfix"/>
