Fix contact section

--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
 							<li>Web</li>
 							<li>LinkedIn</li>
 						</ul>
-						<ul class="list-content ">
-							<li>
-								<a href="#">mrdkucher@umich.edu</a>
-							</li>
+						<ul class="list-content">
+							<li>dkucher at umich dot edu</li>
 							<!-- YOUR EMAIL -->
 							<li>
-								<a href="#">dkucher.github.io</a>
+								<a href="https://mrdkucher.github.io/">mrdkucher.github.io</a>
 							</li>
 							<!-- YOUR WEBSITE  -->
 							<li>
-								<a href="https://www.linkedin.com/in/davidkucher/">LinkedIn</a>
+								<a href="https://www.linkedin.com/in/davidkucher/">davidkucher</a>
 							</li>
 							<!-- YOUR LI PROFILE -->
 						</ul>
