Fix 351 project title typo

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 							<!-- THE TIME YOU WORK WITH THE COMPANY	 -->
 						</div>
 						<div class="job-wrapper clearfix">
-							<div class="experience-title">EECS 442: Computer Vision</div>
+							<div class="experience-title">Automatic Maze Solver</div>
 							<!-- JOB TITLE	-->
 							<div class="company-description">
                                 <p>Course final project which automatically solves mazes parsed from images. Automatically detects maze entrances, compresses image via convolution to reduce redundant information, then compares solutions of A* search, BFS, or MATLAB watershed algorithm.</p>
